--- a/VirtualTourist/Base.lproj/Main.storyboard
+++ b/VirtualTourist/Base.lproj/Main.storyboard
@@ -88,6 +88,13 @@
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
+                                <label key="backgroundView" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Images Found" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="W3U-E3-AEE">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="501"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="33"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FlickrImageCell" id="D5B-pM-4Pr" customClass="FlickrImageCell" customModule="VirtualTourist" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="156" height="156"/>
@@ -97,7 +104,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="C6i-1Q-Gn3">
-                                                    <rect key="frame" x="8" y="8" width="140" height="140"/>
+                                                    <rect key="frame" x="8" y="10" width="140" height="140"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                             </subviews>
@@ -140,6 +147,8 @@
                     <connections>
                         <outlet property="collectionView" destination="9Z7-Ow-spm" id="piT-Cf-2BI"/>
                         <outlet property="mapView" destination="jmn-TV-UxH" id="RG6-UL-Sqg"/>
+                        <outlet property="messageLabel" destination="W3U-E3-AEE" id="8yD-Wp-wev"/>
+                        <outlet property="newCollectionButton" destination="eo9-zc-rC2" id="vCQ-6D-DGd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NjH-tr-Rju" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
